2008-01-31  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-depth.c: added a box of cloned hands to further expand
	the scope of depth testing scenarios exercised by test-depth.

2008-01-31  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-depth.c: (timeline_completed): make use of
	clutter_timeline_set_direction instead of static state.
	(raise_top): made rectangle remain at fixed depth and raise
	above each other.
	(janus_group): added a rectangle with two faces, one red and
	one green, that spins around.

2008-01-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-entry.h:
	* clutter/clutter-entry.c:
	(clutter_entry_set_cursor_position),
	(clutter_entry_get_cursor_position): Rename [gs]et_position()
	to [gs]set_cursor_position(), and avoid method name collisions
	with bindings for high-level languages.

	* clutter/clutter-deprecated.h: Add replacement warnings for the
	renamed methods.

2008-01-31  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_init): Explicitly
	memset() to 0 the clip container, so if you get the clip without
	having set it, you won't get garbage.

2008-01-31  Rob Bradford  <rob@openedhand.com>

	* clutter/x11/clutter-backend-x11-private.h:
	Add missing start to comment

	* clutter/x11/clutter-backend-x11.c:
	* clutter/x11/clutter-event-x11.c:
	* clutter/x11/clutter-stage-x11.c:
	* clutter/x11/clutter-x11.h:
	Remove tabs.

2008-01-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* README: Add the osx flavour, and mark it experimental,
	along with the sdl backend. EGL-based backends should not be
	considered experimental anymore, even though they might require
	tweaking.

2008-01-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* HACKING: Expand the "document API" point, and the release
	process.

	* README: Update the release notes regarding the scale behaviour,
	now that the gravity has been removed.

2007-01-30  Tomas Frydrych  <tf@openedhand.com>

        * clutter/clutter-actor.c: